<resources>
    <string name="app_name">SuraHealthApp</string>
    <string name="text_desk">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo con Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatu Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,"\n" to Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur ma Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatu</string>
    <string name="cari">Cari</string>
    <string name="no_fitur">Fitur Belum Tersedia Untuk Saat Ini</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user">Start Point</string>
    <string name="salam_sehat">Salam Sehat</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="menus">Menus</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="pertolongan_pertama">Pertolongan Pertama</string>
    <string name="p_pertama">Patah Tulang</string>
    <string name="daftar_pertolongan_pertama">Daftar Pertolongan Pertama</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="emailmu_gmail_com">emailmu@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="nomor_wa">089537707777</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="tangal_lahir">tangal lahir</string>
    <string name="logout">Logout</string>
    <string name="kota_surakarta">Kota Surakarta</string>
    <string name="daftar_rumah_sakit_tersedia">Daftar Rumah Sakit Tersedia</string>
    <string name="icon_arrow">Icon Arrow</string>
    <string name="rsud_ibu_fatmawati">RSUD Ibu Fatmawati</string>
    <string name="kelas">Kelas</string>
    <string name="titik_dua">:</string>
    <string name="iii">III</string>
    <string name="kamar_kosong">Kamar Kosong</string>
    <string name="jumlah">3</string>
    <string name="tipe">Tipe</string>
</resources>