<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    card_view:cardElevation="10dp"
    card_view:cardCornerRadius="20dp"
    android:id="@+id/card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo_rumah_sakit"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/rs_fatmawati" />

        <TextView
            android:id="@+id/tv_nama_rumah_sakit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:text="@string/rsud_ibu_fatmawati"
            android:fontFamily="@font/jost"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/jost"
                android:text="@string/kelas"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_titikdua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:fontFamily="@font/jost"
                android:text="@string/titik_dua"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toEndOf="@+id/textView"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/jost"
                android:text="@string/iii"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toEndOf="@+id/tv_titikdua"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/kamar_kosong"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/textView"
                card_view:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tv_titikdua2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/titik_dua"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/tv_titikdua"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_titikdua" />

            <TextView
                android:id="@+id/tv_kamar_kosong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/jumlah"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/tv_kelas"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_kelas" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/tipe"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/textView2"
                card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tv_titikdua3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/titik_dua"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/tv_titikdua2"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_titikdua2" />

            <TextView
                android:id="@+id/tv_antrian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/jumlah"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                card_view:layout_constraintStart_toStartOf="@+id/tv_kamar_kosong"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_kamar_kosong" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>